# reportloop

./: .gitignore  AI_Reporter.html  Architcture.MD  Justfile  LOCAL_DEVELOPMENT.md  README.md  RESUME.md  backend_implementation.md  backend_plan.md  backend_plan_cursor.md  gcp_deployment.md  main.py  manager-phone-strategy.md  pyproject.toml  schema.sql  should_test.md  step-16-implementation-plan.md  version-1.1.md  version-1.2.md  version-2.md
.github/workflows/: firebase-hosting-pull-request.yml
backend/: .env.example  Dockerfile  Untitled  backend.md  database.md  package-lock.json  package.json  prisma.config.ts  tsconfig.json
backend/docs/: adding-ai-provider.md  adding-sms-provider.md  customizing-ai-prompts.md  inbound-webhook-routing.md  mock-sms-provider.md  per-manager-phone-numbers.md  permissions-strategy.md
backend/graph/: tools.py
backend/prisma/: schema.prisma
backend/scripts/tests/: test-provision-service.ts  test-provision.ts
backend/src/: app.ts  config.ts  db.ts  index.ts  redis.ts  supabase.ts
backend/src/jobs/: broadcast.worker.ts  cleanup.worker.ts  conversation.worker.ts  inbound.worker.ts  queue.ts  reminder.worker.ts  scheduler.ts
backend/src/middleware/: rbac.ts
backend/src/routes/: _test.ts  auth.ts  broadcasts.ts  groups.ts  health.ts  participants.ts  questions.ts  schedules.ts  users.ts  webhooks.ts
backend/src/services/: broadcast.service.ts  manager.service.ts
backend/src/utils/: retry.ts
frontend/: .env.example  .env.production  .firebaserc  frontend.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: BroadcastCompose.tsx  Dashboard.tsx  Integrations.tsx  Monitor.tsx  ParticipantPortal.tsx  TweaksPanel.tsx
frontend/src/context/: AppDataContext.tsx  SessionContext.tsx
frontend/src/lib/: apiFetch.ts  inputSx.ts  supabaseClient.ts  toast.ts
frontend/src/types/: index.ts
just/: docker.just  setup.just
mcp_server/: .env.example  main.py  mcp-server.md  pyproject.toml
mcp_server/docs/: add_new_tool.md
mcp_server/src/mcp_server/: main.py
mcp_server/src/mcp_server/core/: config.py  errors.py  log.py  readme.md  retry.py
mcp_server/src/mcp_server/models/: question.py
mcp_server/src/mcp_server/services/: llm.py
mcp_server/src/mcp_server/tools/: questions.py
mcp_server/tests/unit/services/: test_llm.py
mcp_server/tests/unit/tools/: test_questions.py
question-flow/: .env.example  AmandaAI Project.md  AmandaAI_Project.md  pyproject.toml
question-flow/question_flow/agent/: graph.py  nodes.py  state.py
question-flow/question_flow/api/: app.py
question-flow/question_flow/api/routes/: questions.py  sessions.py  webhooks.py
question-flow/question_flow/core/: config.py  logging.py  store.py
question-flow/question_flow/db/: models.py  repository.py
question-flow/question_flow/mcp_server/: server.py
question-flow/scripts/: run_api.py  run_mcp.py
question-flow/tests/: test_workflow.py
supabase/: config.toml
terraform/: cloudrun.tf  iam.tf  main.tf  outputs.tf  registry.tf  secrets.tf  variables.tf
terrafrom/: infra-for-web.tf
tests/: .env.example  .gitignore  README.md  backend-test-plan.md  package-lock.json  package.json  parallel-test-bug-plan.md  tsconfig.json  vitest.workspace.ts
tests/prisma/: schema.prisma
tests/src/ci/: manager-provisioning.test.ts  smoke.test.ts  users.test.ts
tests/src/helpers/: api.ts  auth.ts  db.ts  factories.ts  (+3 more)
(+37 files in other folders)
