[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "question-flow"
version = "0.1.0"
description = "LangGraph + MCP question-answer workflow with Twilio SMS"
requires-python = ">=3.11"
dependencies = [
    # ── LangGraph / LangChain ─────────────────────────────────────────────
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # ── MCP ───────────────────────────────────────────────────────────────
    "fastmcp>=2.0.0",
    # ── API server ─────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",   # required for Form(...) in FastAPI
    # ── Messaging platforms ────────────────────────────────────────────────
    "twilio>=9.0.0",
    # ── Configuration ──────────────────────────────────────────────────────
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    # ── Database (future feature) ──────────────────────────────────────────
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "debugpy>=1.8.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",          # TestClient for FastAPI
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["question_flow"]

# ── Ruff (linter) ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
